# algorithm_from_matlab

./: CMakeLists.txt  README.md
Quinticpolytraj/: CMakeLists.txt  Quinticpolytraj.cpp  Quinticpolytraj.h  Quinticpolytraj_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Quinticpolytraj/examples/: main.cpp  main.h
Quinticpolytraj/html/: report.mldatx
Quinticpolytraj/interface/: _coder_Quinticpolytraj_api.cpp  _coder_Quinticpolytraj_api.h  _coder_Quinticpolytraj_info.cpp  _coder_Quinticpolytraj_info.h  _coder_Quinticpolytraj_mex.cpp  _coder_Quinticpolytraj_mex.h
