###########################################################################
# CMakeLists.txt generated for component Quinticpolytraj
# Product type: STATIC library
###########################################################################
cmake_minimum_required(VERSION 3.12)
project(Quinticpolytraj)

# Propagate the CMAKE_EXPORT_COMPILE_COMMANDS variable from the 
# environment if it is defined as an environment variable, but not as a 
# CMake variable. This is to work around a bug in CMake 3.19 when the 
# "NMake Makefiles" generator is selected.
if(DEFINED ENV{CMAKE_EXPORT_COMPILE_COMMANDS} AND NOT DEFINED CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CMAKE_EXPORT_COMPILE_COMMANDS $ENV{CMAKE_EXPORT_COMPILE_COMMANDS})
endif()

# Define common variables that are used within the whole project.
set(SYSLIB_PREFIX $<IF:$<AND:$<BOOL:${WIN32}>,$<NOT:$<BOOL:${MINGW}>>>,lib,>)

###########################################################################
## Path variables
###########################################################################
# Derive an absolute path to the code generation anchor folder.
get_filename_component(START_DIR ../../.. ABSOLUTE)

# Special directories defined by using CACHE variables can be overridden 
# by setting the variable from the command line, e.g.,
# 
# 	cmake . -DMATLAB_ROOT=/path/to/another/matlab/root
set(MATLAB_ROOT E:/matlab CACHE PATH "")

# Additional variables that are defined conditionally.
if("${CMAKE_CURRENT_BINARY_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    set(BINARY_START_DIR "${START_DIR}")
else()
    set(BINARY_START_DIR "${CMAKE_BINARY_DIR}")
endif()

###########################################################################
## System Libraries
###########################################################################
find_library(FOUND_LIBM m NO_SYSTEM_ENVIRONMENT_PATH PATHS ${CMAKE_C_IMPLICIT_LINK_DIRECTORIES} ${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES})
find_library(FOUND_LIBSTDCXX stdc++ NO_SYSTEM_ENVIRONMENT_PATH PATHS ${CMAKE_C_IMPLICIT_LINK_DIRECTORIES} ${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES})

###########################################################################
## Target definition and commands
###########################################################################

# Definition of target "Quinticpolytraj".
add_library(Quinticpolytraj STATIC ${START_DIR}/codegen/lib/Quinticpolytraj/rt_nonfinite.cpp
    ${START_DIR}/codegen/lib/Quinticpolytraj/rtGetNaN.cpp
    ${START_DIR}/codegen/lib/Quinticpolytraj/rtGetInf.cpp
    ${START_DIR}/codegen/lib/Quinticpolytraj/Quinticpolytraj.cpp)

# Set properties for target "Quinticpolytraj".
set_target_properties(Quinticpolytraj PROPERTIES PREFIX ""
    POSITION_INDEPENDENT_CODE ON
    RUNTIME_OUTPUT_DIRECTORY "${BINARY_START_DIR}/codegen/lib/Quinticpolytraj/$<0:>"
    LIBRARY_OUTPUT_DIRECTORY "${BINARY_START_DIR}/codegen/lib/Quinticpolytraj/$<0:>"
    ARCHIVE_OUTPUT_DIRECTORY "${BINARY_START_DIR}/codegen/lib/Quinticpolytraj/$<0:>")

# Specify language features required for target "Quinticpolytraj".
target_compile_features(Quinticpolytraj PUBLIC cxx_std_11)

# Specify compiler preprocessor definitions for target "Quinticpolytraj".
target_compile_definitions(Quinticpolytraj PRIVATE -DMODEL=Quinticpolytraj)

# Specify include directories for target "Quinticpolytraj".
target_include_directories(Quinticpolytraj PUBLIC $<BUILD_INTERFACE:${START_DIR}/codegen/lib/Quinticpolytraj>
    $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/codegen/lib/Quinticpolytraj>
    $<BUILD_INTERFACE:${START_DIR}>
    $<INSTALL_INTERFACE:$<INSTALL_PREFIX>>
    $<BUILD_INTERFACE:${MATLAB_ROOT}/extern/include>)

# Specify library link dependencies for target "Quinticpolytraj".  CMake 
# generator expressions are used to create a CMakeLists.txt file that 
# supports multiple platforms with differently named system library 
# dependencies.
target_link_libraries(Quinticpolytraj INTERFACE $<$<BOOL:${FOUND_LIBM}>:m>
    $<$<BOOL:${FOUND_LIBSTDCXX}>:stdc++>)


###########################################################################
## Build success message
###########################################################################
add_custom_command(TARGET Quinticpolytraj POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E cmake_echo_color --cyan "\\#\\#\\# Created STATIC library: $<TARGET_FILE:Quinticpolytraj>")

###########################################################################
## Call toolchain hook function if defined
###########################################################################
if(COMMAND toolchain_target_hook)
    toolchain_target_hook(Quinticpolytraj)
endif()
